src/objects/Apttus_Billing__Invoice__c.object
<CustomObject>
    <description>Represents an invoice associated with an account</description>
    <fields>
        <fullName>APTS_External_Invoice_Number__c</fullName>
        <description>The invoice number in SAP.</description>
        <externalId>true</externalId>
        <label>External Invoice Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Invoice_Link__c</fullName>
        <description>Link to pdf document stored in IXOS.</description>
        <label>Invoice Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_SAPBilling_Type__c</fullName>
        <label>SAP Billing Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Credit_Amount__c</fullName>
        <label>Total Credit Amount</label>
        <summarizedField>Apttus_Billing__InvoiceLineItem__c.Apttus_Billing__Amount__c</summarizedField>
        <summaryForeignKey>Apttus_Billing__InvoiceLineItem__c.Apttus_Billing__InvoiceId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Bill To)</relationshipLabel>
        <relationshipName>InvoicesBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingCity__c</fullName>
        <description>The billing city</description>
        <inlineHelpText>The billing city</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingCountry__c</fullName>
        <description>The billing country</description>
        <inlineHelpText>The billing country</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingPostalCode__c</fullName>
        <description>The billing postal code</description>
        <inlineHelpText>The billing postal code</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference (Deprecated)</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingState__c</fullName>
        <description>The billing street</description>
        <inlineHelpText>The billing street</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingStreet__c</fullName>
        <description>The billing street</description>
        <inlineHelpText>The billing street</inlineHelpText>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CollectionStatus__c</fullName>
        <description>The invoice collection status</description>
        <inlineHelpText>The invoice collection status</inlineHelpText>
        <label>Collection Status (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Collections</fullName>
                </value>
                <value>
                    <fullName>Transferred to Collections Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DaysOutstanding__c</fullName>
        <description>Number of days from the Invoice Due Date.</description>
        <formula>ROUND(NOW()- Apttus_Billing__DueDate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days from the Invoice Due Date.</inlineHelpText>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DeliveryStatus__c</fullName>
        <description>The invoice delivery status</description>
        <inlineHelpText>The invoice delivery status</inlineHelpText>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DueDate__c</fullName>
        <description>The invoice due date</description>
        <inlineHelpText>The invoice due date</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ErrorMessage__c</fullName>
        <description>Details about the error.</description>
        <inlineHelpText>Details about the error.</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ErrorStatus__c</fullName>
        <description>Error Status for Custom Numbering or Tax Calculation.</description>
        <inlineHelpText>Error Status for Custom Numbering or Tax Calculation.</inlineHelpText>
        <label>Error Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Calculation Error</fullName>
                </value>
                <value>
                    <fullName>Custom Numbering Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceAttachmentTemplate__c</fullName>
        <description>The optional Name of the Template to use when creating an attachment file for the Invoice.</description>
        <inlineHelpText>The optional Name of the Template to use when creating an attachment file for the Invoice.</inlineHelpText>
        <label>Invoice Attachment Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceDate__c</fullName>
        <description>The invoice date</description>
        <inlineHelpText>The invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceEmailTemplate__c</fullName>
        <description>The optional Name of the Email Template to use when creating the Email used to deliver the Invoice attachment file.</description>
        <inlineHelpText>The optional Name of the Email Template to use when creating the Email used to deliver the Invoice attachment file.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceNumber__c</fullName>
        <description>The custom Invoice number.  Will only be set if Invoice Custom Numbering has been configured.</description>
        <inlineHelpText>The custom Invoice number.  Will only be set if Invoice Custom Numbering has been configured.</inlineHelpText>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceRunResultId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the invoice run result that created the invoice.</description>
        <inlineHelpText>ID of the invoice run result that created the invoice.</inlineHelpText>
        <label>Invoice Run Result Id</label>
        <referenceTo>Apttus_Billing__InvoiceRunResult__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Key__c</fullName>
        <description>Key used for grouping line items in an invoice run result.</description>
        <inlineHelpText>Key used for grouping line items in an invoice run result.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LegalEntityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the optional Legal Entity. A value of null implies there is no corresponding Legal Entity.</description>
        <inlineHelpText>The Id of the optional Legal Entity.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PONumber__c</fullName>
        <description>The purchase order number</description>
        <inlineHelpText>The purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentStatus__c</fullName>
        <description>Payment status for the invoice</description>
        <inlineHelpText>Payment status for the invoice</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partially paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the order</description>
        <inlineHelpText>ID of the payment term associated with the order</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Ship To)</relationshipLabel>
        <relationshipName>InvoicesShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToCity__c</fullName>
        <description>The ship to city</description>
        <inlineHelpText>The ship to city</inlineHelpText>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToCountry__c</fullName>
        <description>The ship to country</description>
        <inlineHelpText>The ship to country</inlineHelpText>
        <label>Ship To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToPostalCode__c</fullName>
        <description>The ship to postal code</description>
        <inlineHelpText>The ship to postal code</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToState__c</fullName>
        <description>The ship to street</description>
        <inlineHelpText>The ship to street</inlineHelpText>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToStreet__c</fullName>
        <description>The ship to street</description>
        <inlineHelpText>The ship to street</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Sold To)</relationshipLabel>
        <relationshipName>InvoicesSoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SoldToCity__c</fullName>
        <description>The billing city</description>
        <inlineHelpText>The sold to city</inlineHelpText>
        <label>Sold To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SoldToCountry__c</fullName>
        <description>The sold to country</description>
        <inlineHelpText>The sold to country</inlineHelpText>
        <label>Sold To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SoldToPostalCode__c</fullName>
        <description>The sold to postal code</description>
        <inlineHelpText>The sold to postal code</inlineHelpText>
        <label>Sold To Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SoldToState__c</fullName>
        <description>The sold to street</description>
        <inlineHelpText>The sold to street</inlineHelpText>
        <label>Sold To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SoldToStreet__c</fullName>
        <description>The sold to street</description>
        <inlineHelpText>The sold to street</inlineHelpText>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SourceInvoiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to link split invoice to source invoice</description>
        <inlineHelpText>This field is managed by the billing package for split invoice functionality. This field should not be manually populated</inlineHelpText>
        <label>Source Invoice</label>
        <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
        <relationshipLabel>Split Invoices</relationshipLabel>
        <relationshipName>SplitInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>The invoice status</description>
        <inlineHelpText>The invoice status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Approved</fullName>
                </value>
                <value>
                    <fullName>Draft Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalDiscountAmount__c</fullName>
        <description>The total discount amount</description>
        <inlineHelpText>The total discount amount</inlineHelpText>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalDueAmount__c</fullName>
        <description>The invoice due amount</description>
        <inlineHelpText>The invoice due amount</inlineHelpText>
        <label>Total Due Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalFeeAmount__c</fullName>
        <description>The total fee amount</description>
        <inlineHelpText>The total fee amount</inlineHelpText>
        <label>Total Fee Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalInvoiceAmount__c</fullName>
        <description>The total invoice amount</description>
        <inlineHelpText>The total invoice amount</inlineHelpText>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalOneTimeFeeAmount__c</fullName>
        <description>The total one time fee amount</description>
        <inlineHelpText>The total one time fee amount</inlineHelpText>
        <label>Total One Time Fee Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalRecurringFeeAmount__c</fullName>
        <description>The total recurring fee amount</description>
        <inlineHelpText>The total recurring fee amount</inlineHelpText>
        <label>Total Recurring Fee Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalTaxAmount__c</fullName>
        <description>The total tax amount</description>
        <inlineHelpText>The total tax amount</inlineHelpText>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TotalUsageFeeAmount__c</fullName>
        <description>The total usage fee amount</description>
        <inlineHelpText>The total usage fee amount</inlineHelpText>
        <label>Total Usage Fee Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TransferredToERP__c</fullName>
        <description>Indicates whether the invoice has been transferred to the ERP application</description>
        <inlineHelpText>Indicates whether the invoice has been transferred to the ERP application</inlineHelpText>
        <label>Transferred To ERP ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Type__c</fullName>
        <description>The invoice type</description>
        <inlineHelpText>The invoice type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All_Invoices_JV</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Billing__BillingCity__c</columns>
        <columns>Apttus_Billing__DueDate__c</columns>
        <columns>Apttus_Billing__ErrorStatus__c</columns>
        <columns>APTS_Invoice_Link__c</columns>
        <columns>Apttus_Billing__InvoiceNumber__c</columns>
        <columns>Apttus_Billing__Status__c</columns>
        <columns>Apttus_Billing__TotalInvoiceAmount__c</columns>
        <columns>Apttus_Billing__TotalTaxAmount__c</columns>
        <columns>Apttus_Billing__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices to Date</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Billing__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Billing__BillToAccountId__c</columns>
        <columns>Apttus_Billing__Status__c</columns>
        <columns>Apttus_Billing__PaymentTermId__c</columns>
        <columns>Apttus_Billing__InvoiceDate__c</columns>
        <columns>Apttus_Billing__TotalInvoiceAmount__c</columns>
        <columns>Apttus_Billing__TotalFeeAmount__c</columns>
        <columns>Apttus_Billing__TotalTaxAmount__c</columns>
        <columns>Apttus_Billing__BillingCountry__c</columns>
        <columns>APTS_External_Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DK_Invoice_List_Overview</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Billing__InvoiceDate__c</columns>
        <columns>Apttus_Billing__BillToAccountId__c</columns>
        <columns>Apttus_Billing__SoldToAccountId__c</columns>
        <columns>Apttus_Billing__BillingPreferenceId__c</columns>
        <columns>APTS_External_Invoice_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>DK - Invoice List Overview</label>
        <sharedTo>
            <roleAndSubordinatesInternal>DK_Sales_Support_Sales_Support_Manager_3</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Invoices_owner_me</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Billing__BillToAccountId__c</columns>
        <columns>Apttus_Billing__Status__c</columns>
        <columns>Apttus_Billing__PaymentTermId__c</columns>
        <columns>Apttus_Billing__InvoiceDate__c</columns>
        <columns>Apttus_Billing__TotalInvoiceAmount__c</columns>
        <columns>Apttus_Billing__TotalFeeAmount__c</columns>
        <columns>Apttus_Billing__TotalTaxAmount__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Invoices</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>